# battery-tester

./: Battery_Tester.drawio  Battery_Tester.md  Cargo.toml  _flake.nix
battery_tester_common/: Cargo.toml  flake.nix  rust-toolchain.toml
battery_tester_common/src/: lib.rs
battery_tester_microbit/: Cargo.toml  build.rs  flake.nix  rust-toolchain.toml
battery_tester_microbit/.cargo/: config.toml
battery_tester_microbit/.helix/: languages.toml
battery_tester_microbit/src/: lib.rs  main.rs  pwm.rs
battery_tester_microbit/src/ina260/: mod.rs
battery_tester_pc/: .~lock.2025-4-20251108_13:37:23UTC-05:00.tsv#  2025-4-20251108_13:37:23UTC-05:00.tsv  2025-4-20251109_02:22:41UTC-05:00.tsv  2025-4-20251109_14:53:05UTC-05:00.ods  2025-4-20251109_14:53:05UTC-05:00.tsv  Cargo.toml  flake.nix  justfile
battery_tester_pc/src/: client.rs  files.rs  ipc.rs  lib.rs  serial.rs  server.rs
