[package]
name = "battery_tester_common"
version = "0.1.0"
edition.workspace = true

[dependencies]
defmt = "1.0.1"
postcard = { version = "1.1.3", features = ["embedded-io", "experimental-derive", "heapless-cas", "use-defmt"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
nutype = { version = "0.6.2",  default-features = false, features = ["serde", "derive_unsafe"] }
